# local_rag_v2

./: .gitignore  CONSTITUTION.md  COVERAGE_REPORT.md  README.md  SESSION_RESUME.md  SPECKIT_VALIDATION_DEBIAN_CONTAINER.md  TASKS.md  TASK_COMPLETION_REVIEW.md  coverage.json  local-rag.yaml  pyproject.toml  requirements.txt  security-audit.json  setup.py  speckit.yaml
.github/: copilot-instructions.md
.github/workflows/: build-packages.yml  ci.yml  debug-build.yml  pr-validation.yml
.specify/memory/: constitution.md
build-report/: build-report.md
config/: local-rag.service
docs/: TDD_WORKFLOW.md
models/: README.md  download_models.sh
packaging/debian/: changelog  control  install  postinst  prerm  rules
packaging/scripts/: local-rag.sh
prompts/: claude_system_prompt.md
scripts/: monitor-ci-build.sh  tdd-cycle.sh  tdd-status.sh  tdd-task.sh  test-ci-local.sh  test-quick.sh
specs/: 01_problem.md  02_requirements.md  03_design.md  04_milestones.md  05_risks.md  06_configuration.md  07_content_strategy.md  08_testing_strategy.md  09_deployment.md  10_architecture_decisions.md  11_ci_cd_automation.md
specs/001-local-rag-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-generated.md  tasks.md
specs/001-local-rag-mvp/checklists/: mvp-requirements.md
specs/001-local-rag-mvp/contracts/: api.yaml
specs/002-production-ci-cd/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-production-ci-cd/contracts/: api-contracts.md
src/guide/: __init__.py  cli.py  content_manager.py  llm_interface.py  main.py  model_manager.py  vector_store.py  web_interface.py
test_content/: rag_architecture.txt  raspberry_pi_guide.txt  troubleshooting.txt
tests/: test_basic.py
tests/integration/: test_document_api.py  test_query_api.py  test_rag_workflow.py
tests/unit/: test_cli.py  test_content_manager.py  test_init.py  test_llm_interface.py  test_main.py  test_model_manager.py  test_thermal_monitor.py  test_vector_store.py  test_web_interface.py
