[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-rag-v2"
version = "0.1.0"
description = "Local RAG system with FastAPI backend"
authors = [{name = "Peenak Inamdar", email = "peenaki@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "chromadb==0.4.18",
    "llama-cpp-python==0.2.20",
    "sentence-transformers==2.2.2",
    "rich==13.9.2",
    "numpy==2.0.2",
    "pydantic==2.5.0",
    "pyyaml==6.0.1",
    "httpx==0.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-bdd==7.3.0",
    "ruff==0.6.9",
    "pytest-asyncio==0.21.1",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "specs/",
    "docs/",
    ".github/",
    "scripts/"
]

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
addopts = "-q"
